--- a/WebApp/src/main/webapp/WEB-INF/web.xml
+++ b/WebApp/src/main/webapp/WEB-INF/web.xml
@@ -57,4 +57,20 @@
     <servlet-name>LogOutServlet</servlet-name>
     <url-pattern>/back/logout</url-pattern>
   </servlet-mapping>
+  
+   <servlet>
+    <servlet-name>jersey-serlvet</servlet-name>
+    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+    <init-param>
+      <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+      <param-value>true</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>jersey-serlvet</servlet-name>
+    <url-pattern>/service/*</url-pattern>
+  </servlet-mapping>
+  
+  
 </web-app>
